chore: apply small content/style tweaks

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Page 1: Landing -->
       <section class="page page-landing" data-page="landing">
         <div class="center-stack">
-          <h1 class="title">Hiii klerbells, di bitaw ni survey actually I have something to show you hehe ✨</h1>
+          <h1 class="title">Hiii di bitaw ni survey actually I have something to show you hehe ✨</h1>
           <button class="btn primary" id="btn-start">Start</button>
         </div>
       </section>
