chore: sync local edits

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Page 3: Letter -->
       <section class="page page-letter" data-page="letter">
         <div class="center-stack">
-          <p class="subtitle">I click ang heart</p>
+          <p class="subtitle">I click ang heart then scroll down</p>
           <div class="envelope-wrap">
             <button class="envelope" id="envelope" aria-expanded="false" aria-controls="letter-content">
               <span class="env-back"></span>
