chore: prepare for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
     <!-- Background hearts -->
     <div class="hearts" aria-hidden="true"></div>
 
-    <!-- Soft music (optional). Toggle removed by request -->
-    <audio id="bg-music" loop preload="auto" hidden>
-      <source src="assets/lofi.mp3" type="audio/mpeg" />
-    </audio>
-
+    <!-- GitHub Pages deployment ready -->
     <main id="app">
       <!-- Page 0: Survey Intro -->
       <section class="page page-survey is-active" data-page="survey">
@@ -75,9 +71,9 @@
                 <div class="letter-in-scroll">
                   <p>Hiii klerbells BAHAHAHAHA. It took me a lot of courage to tell you this and hooohh bahala na HAHAHA.</p>
                   <p>We’ve been talking for 2 months already, and I can’t deny that I’m starting to like you. Actually, murag nagsugod na gani to before pa. Every time your name pops up on my notifications, mungisi rakog kalit HAHAHAHA. Or like, mag sige kog hulat sa imong replies maski katugon nako HAHAHAHA.</p>
-                  <p>Also, every time I’m not okay, mawala ra akong bad mood kung makasturya ko nimo. Thank you for that. I really enjoy doing things with you… those random calls maski way istorya HAHAHA, movie nights, magdula Roblox or ML, or unsa pa na.</p>
+                  <p>Also, every time I’m not okay, mawala ra akong bad mood kung makasturya taka. Thank you for that. I really enjoy doing things with you… those random calls maski way istorya HAHAHA, movie nights, magdula Roblox or ML, or unsa pa na.</p>
                   <p>I know 2 months isn’t really enough to fully know someone labi na online ra ta nagkaila, but that’s exactly why I’m telling you this… because I want to know you more. I know you have a lot on your plate right now like studies and everything, but I just want to express how I feel towards you ehe HAHAHAHA.</p>
-                  <p>I don’t expect anything after this HAHAHA. No rush and no pressure, I just wanted to let you know how much I admire you hehe. If you don’t feel the same way, I completely understand (pero unta same ay HAHAHA).</p>
+                  <p>I don’t expect anything after this HAHAHA. No rush and no pressure, I just wanted to let you know how much I admire you hehe. If you don’t feel the same way, I completely understand hehe.</p>
                   <p>That’s all hehe. Thank you for existing 🫶</p>
                 </div>
               </article>
